# ComfyUI_CustomNet

./: Comfyui_CustomNet_node.py  README.md  __init__.py  customnet_util.py  gradio_utils.py  pyproject.toml  requirements.txt
configs/: config_customnet.yaml  config_customnet_inpaint.yaml
custom_net/: attention.py  attentioni.py  autoencoder.py  classifier.py  customnet.py  customnet_inpaint.py  dddim.py  ddim.py  ddpm.py  model.py  modules.py  openaimodel.py  openaimodeli.py  plms.py  util.py
example/: workflow.json
models/: autoencoder.py  classifier.py  ddim.py  ddpm.py  plms.py  sampling_util.py
